--- a/public/task.html
+++ b/public/task.html
@@ -1,68 +1,39 @@
-Instructions
-Your task is to build the Australia Zoo activity as a multi page React website.
-
-Your knowledge of project design, state, props, components and routing are being examined. The design is somewhat up to you, but the structure of the pages is detailed below.:
-
-The local djurpark is hosting an exhibition of Australian animals and want to raise awareness by publishing a website.
-The website will consist of:
+Instructions Your task is to build the Australia Zoo activity as a multi page
+React website. Your knowledge of project design, state, props, components and
+routing are being examined. The design is somewhat up to you, but the structure
+of the pages is detailed below.: The local djurpark is hosting an exhibition of
+Australian animals and want to raise awareness by publishing a website. The
+website will consist of:
 <!-- a home page​
 a page detailing the mammals​
 a page details the birds​
 a page detailing the reptiles -->
-Attached are 3 files detailing 9 animals. Add more if you like, but your site MUST use these 9 animals.
-
-Page Structure:
-Each page should have a header with a logo
-Each page should have a navigational menu with links to “home”, "birds", "mammals" and "reptiles". 
-Each page should have a footer with some content.
-Each page should have a side bar and a main content area – the content of both of these areas will be different for each page, but the page layouts should be similar
-
-
-Home Page
-Sidebar: List all the animals
-Main content:
-Welcome message
+Attached are 3 files detailing 9 animals. Add more if you like, but your site
+MUST use these 9 animals.
+<!-- Page Structure: Each page should have a header with a logo -->
+<!-- Each page should have a navigational menu with links to “home”, "birds", "mammals" and "reptiles".  -->
+<!-- Each page should have a footer with some content. -->
+Each page should have a side bar and a main content area – the content of both
+of these areas will be different for each page, but the page layouts should be
+similar Home Page Sidebar: List all the animals Main content: Welcome message
 When animal is clicked, remove welcome message and replaced with a short summary
-A “Read More” button leads to the “animal detail” page
-If the “active” animal's name is clicked again, it is no longer active
-Only one animal can be active at a time
-short summary of an animal consists of:
-    a small image of the animal
-    the name of the animal
-    the first 200 characters of the description (or a similar solution)
-    what the animal eats
-    which group it belongs to WITH a link to the group page (eg mammal, bird or reptile)
-Clicking on Read More button for any animal on the home page should detail that animal:
-Show the full summary of the animal styles as a pop up or somesuch
-Show a “Back to Home” button
-
-
-Group Pages
-Sidebar: Group ONLY
-Main content:
-Message
-When a name is clicked - show the full summary
-The full summary should show all the properties of an animal.
-
-To achieve a Godkänt grade you must:
+A “Read More” button leads to the “animal detail” page If the “active” animal's
+name is clicked again, it is no longer active Only one animal can be active at a
+time short summary of an animal consists of: a small image of the animal the
+name of the animal the first 200 characters of the description (or a similar
+solution) what the animal eats which group it belongs to WITH a link to the
+group page (eg mammal, bird or reptile) Clicking on Read More button for any
+animal on the home page should detail that animal: Show the full summary of the
+animal styles as a pop up or somesuch Show a “Back to Home” button Group Pages
+Sidebar: Group ONLY Main content: Message When a name is clicked - show the full
+summary The full summary should show all the properties of an animal. To achieve
+a Godkänt grade you must:
 
 <!-- Routes for 4 pages using React router -->
-Reusable components
-Relevant use of props
-Relevant use of useState
-Components organised correctly
-Responsive design.
-
-To achieve a Välgodkänt grade you must complete the above and:
-
-External data imported where needed
-Directory and file organisation
-Use of CSS modules
-Use of useEffect if appropriate
-Use of Layout for page structure
-Correct code style and syntax
-Semantic naming
-
-Submission: 
-A link to the live site published on Render, Vercel or other service (github pages will NOT support React)
-A link to the github repo
+Reusable components Relevant use of props Relevant use of useState Components
+organised correctly Responsive design. To achieve a Välgodkänt grade you must
+complete the above and: External data imported where needed Directory and file
+organisation Use of CSS modules Use of useEffect if appropriate Use of Layout
+for page structure Correct code style and syntax Semantic naming Submission: A
+link to the live site published on Render, Vercel or other service (github pages
+will NOT support React) A link to the github repo
