--- a/public/task.html
+++ b/public/task.html
@@ -29,8 +29,8 @@ Only one animal can be active at a time
 
 short summary of an animal consists of:​
 a small image of the animal​
-the name of the animal​
-the first 200 characters of the description (or a similar solution)​
+<!-- the name of the animal​ -->
+<!-- the first 200 characters of the description (or a similar solution)​ -->
 what the animal eats​
 which group it belongs to WITH a link to the group page (eg mammal, bird or reptile)
 
