add image files and image paths to data

--- a/public/task.html
+++ b/public/task.html
@@ -28,7 +28,7 @@ If the “active” animal's name is clicked again, it is no longer active, and 
 Only one animal can be active at a time
 
 short summary of an animal consists of:​
-a small image of the animal​
+<!-- a small image of the animal​ -->
 <!-- the name of the animal​ -->
 <!-- the first 200 characters of the description (or a similar solution)​ -->
 what the animal eats​
