--- a/public/task.html
+++ b/public/task.html
@@ -27,16 +27,16 @@ A “Read More” button is displayed after the short summary, clicking it leads
 If the “active” animal's name is clicked again, it is no longer active, and the “welcome” message is displayed
 Only one animal can be active at a time
 
-short summary of an animal consists of:​
+<!-- short summary of an animal consists of:​ -->
 <!-- a small image of the animal​ -->
 <!-- the name of the animal​ -->
 <!-- the first 200 characters of the description (or a similar solution)​ -->
-what the animal eats​
-which group it belongs to WITH a link to the group page (eg mammal, bird or reptile)
+<!-- what the animal eats​ -->
+<!-- which group it belongs to WITH a link to the group page (eg mammal, bird or reptile) -->
 
-Clicking on Read More button for any animal on the home page should detail that animal:​
+<!-- Clicking on Read More button for any animal on the home page should detail that animal:​
 Show the full summary of the animal styles as a pop up or somesuch​
-Show a “Back to Home” button
+Show a “Back to Home” button -->
 
 
 -Group Pages
